# training-cpp

./: grid_processing.py  note.txt
2.sharedLib/: CMakeLists.txt  main.cpp
2.sharedLib/shared_lib/: Hello_Name.cpp  Hello_Name.h
Affine_Transformation/: test_affine.py
Classification/: CMakeLists.txt  classification.py  classify.py  dataset.py  export2onnx.py  infer.py  infer_onnx.py  main.cpp  model.py  script_crop.py  script_cutpaste.py  train.py
Classification/include/: cifar10.h  convnet.h
Classification/src/: cifar10.cpp  convnet.cpp  transform.cpp
CropImage/: CMakeLists.txt  main.cpp
FundamentalDataStructures/homework/: crop_image.py  transpose_channel.py
Multithreading/: CMakeLists.txt  main.cpp
Multithreading_thanh/: CMakeLists.txt  main.cpp
ReadImageLib/: CMakeLists.txt  main.cpp
ReadImageLib/installed_lib/: CMakeLists.txt  main.cpp
ReadImageLib/installed_lib/include/: Read_Image.h
ReadImageLib/read_image_lib/: Read_Image.cpp
SSD_object_detection/: infer.py  model.py  ssd.py  train.py
multithreading_2/: CMakeLists.txt  main.cpp
opencv.testing/: CMakeLists.txt  main.cpp
todolist_app_tam/main_todolist/: add_dialog.ui  form.ui  main.py  main.pyproject
